# IDL_Assignment_2

./: .gitignore  README.md  coen.py  load_in_data.py  main.py  pyproject.toml
Mario/: Task1_MLP.ipynb  Task_1_CNN.ipynb  Task_2 classifier.ipynb  Task_2 classifier_more.ipynb  Task_2 multi head + theta.ipynb  Task_2 multi_head ---V2.ipynb  Task_2 multi_head.ipynb  Task_2 regression.ipynb  Task_2 regressor + theta.ipynb
task_1/: Configuration_performance_file.csv  Configuration_performance_file_cnn.csv  Configuration_performance_file_cnn_1.csv  task1.ipynb
task_2/: CosSin.csv  CosSin_full.csv  Task_2.ipynb  Task_2_1.ipynb  classifier_10.csv  classifier_10_full.csv  classifier_30.csv  classifier_30_full.csv  classifier_5.csv  classifier_5_full.csv  double_head_10.csv  double_head_10_full.csv  double_head_30.csv  double_head_30_full.csv  double_head_5.csv  double_head_5_full.csv  load_in_data.py
task_2/task_2/: history_with_preprocessing.csv
